[package]
name = "either-both"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"
exclude = [".editorconfig", ".gitignore"]

[features]
default = ["std"]
std = []

# Adds some interoperability with either
either = ["dep:either"]

[dependencies]
either = { version = "1", optional = true, default-features = false }

[dev-dependencies]
rstest = "0.25"
