[package]
name = "either-both"
version = "1.0.0"
description = "An enum similar to the well-known `Either`, but with a `Both` variant"
license = "MIT OR Apache-2.0"
repository = "https://github.com/spenserblack/either-both"
edition = "2024"
rust-version = "1.85.1"
keywords = ["no-std"]
categories = ["data-structures", "no-std"]
exclude = [".editorconfig", ".gitignore"]

[features]
default = ["std"]
std = []

# Adds some interoperability with either
either = ["dep:either"]

[dependencies]
either = { version = "1", optional = true, default-features = false }

[dev-dependencies]
rstest = "0.25"

[package.metadata.docs.rs]
features = ["either"]
